# max-map-manager

./: .gitattributes  .gitignore  Cargo.toml  LICENSE.md  README.md  README.txt  THIRD-PARTY-LICENSES.md  about.toml  licenses.hbs  package-lock.json  package.json  tsconfig.json  vite.config.ts
crates/archive/: Cargo.toml  README.md
crates/archive/src/: archive_files.rs  common.rs  lib.rs  registry.rs  restore_files.rs
crates/archive/src/local_test_utils/: mod.rs
crates/archive/test_files/reference/: registry.json
crates/saves/: Cargo.toml  README.md
crates/saves/src/: common.rs  file_path_to_planet_index.rs  find_related_save_files.rs  find_save_files.rs  get_related_save_files.rs  lib.rs  read_save_file_metadata.rs  structs.rs  v70.rs
crates/saves/test_files/v70/: SAVE31.DTA
crates/tauri/: Cargo.toml  README.md  tauri.conf.json  tauri.linux.conf.json  tauri.windows.conf.json
crates/tauri/capabilities/: default.json
crates/tauri/resources/: README.txt  THIRD-PARTY-LICENSES.txt  mmm.res  settings.json
crates/tauri/resources/linux/: app.desktop
crates/tauri/src/: app_settings.rs  app_state.rs  get_matching_map_name.rs  lib.rs  load_known_maps_info.rs  log_file.rs  main.rs
crates/tauri/src/commands/: archive_map_and_saves_command.rs  generate_bigmap_preview_command.rs  get_app_state_command.rs  get_archived_maps_and_saves_command.rs  get_installed_maps_and_saves_command.rs  install_imported_map_command.rs  is_setup_required_command.rs  mod.rs  open_devtools_command.rs  open_dir_path_in_file_explorer_command.rs  read_archived_maps_metadata_command.rs  read_installed_maps_metadata_command.rs  read_save_files_metadata_command.rs  read_settings_command.rs  restore_map_and_saves_command.rs  set_app_paths_command.rs  verify_dir_path_command.rs  verify_game_path_command.rs
crates/tauri/src/internal_server/: create_error_response.rs  generate_bigmap_preview.rs  lre.rs  mod.rs
crates/tauri/src/internal_server/request_handlers/: get_file_request.rs  get_res_image_request.rs  mod.rs  (+2 more)
crates/test_utils/: Cargo.toml
crates/test_utils/src/: fs_helpers.rs  lib.rs  logger.rs
crates/wrl/: Cargo.toml  README.md
crates/wrl/src/: consts.rs  enums.rs  lib.rs  structs.rs  test_utils.rs
crates/wrl/src/file/: calc_expected_file_size.rs  copy_wrl_file_without_tail.rs  get_file_size.rs  hash_wrl_file_without_tail.rs  is_file_size_valid.rs  mod.rs  read_wrl_file.rs  read_wrl_header.rs  read_wrl_tail_header.rs  verify_file.rs  verify_file_content.rs  verify_tail_header.rs  write_wrl_tail_header.rs
crates/wrl/src/preview/: generate_bigmap_preview.rs  generate_minimap_preview.rs  mod.rs  save_bigmap_to_file.rs  save_minimap_to_file.rs
crates/wrl/test_files/reference/: REF.WRL  REF.WRL.TAIL  REF.WRL.TAIL.BROKEN  REF.WRL.TRIMMED  create-reference-wrl.js  ref_bigmap_preview.rgba  tail_header.json
(+157 files in other folders)
