[package]
name = "max-map-manager"
version = "0.9.5"
description = "The M.A.X. Map Manager"
authors = ["Aneta Suns"]
edition = "2024"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "max_map_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
archive = { path = "../archive" }
bmp = { path = "../bmp" }
res_reader = { path = "../res_reader" }
saves = { path = "../saves" }
wrl = { path = "../wrl" }
chrono = "0.4.41"
fern = "0.7.1"
hex = "0.4.3"
log = "0.4.27"
serde = { version = "1", features = ["derive"] }
serde_ini = "0.2.0"
serde_json = "1"
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
lazy_static = "1.5.0"
tauri-plugin-process = "2"
tauri-plugin-shell = "2"
tauri-plugin-single-instance = "2"
cargo-about = "0.8.4"
