[package]
name = "wrl"
version = "0.1.0"
description = "WRL Rust Utils"
authors = ["Aneta Suns"]
edition = "2024"
license = "MIT"

[dependencies]
blake3 = { version = "1.8.2", features = ["mmap", "rayon"] }
byteorder = "1.5.0"
chrono = "0.4.41"
image = { version = "0.25.6", features = ["png"] }
log = "0.4.27"
memmap2 = "0.9.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
